@@ -1,3 +1,7 @@
+2004-05-26 PhoboX <phobox@sendmail.cz>
+	* BUILD: changed default editor to ed
+	* tex.sh: added, installs in /etc/profile.d for setting TeX editor (bug #5764)
+
 2004-02-20 Terry Ross <terry@aliboom.com>
 	* DETAILS corrected WEB_SITE
 
